--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,8 @@
 {
-	"name": "Java 11",
+	"name": "SIT213 | JDK11",
 	"dockerFile": "Dockerfile",
 	
-	// Uncomment the next line if you want to publish any ports.
-	// "appPort": [],
-
-	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "java -version",
+	"postCreateCommand": "java -version",
 
 	"extensions": [
 		"vscjava.vscode-java-pack"
