--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ jdk: openjdk11
 
 script:
   - cd DUMESTRE-HUGDELARAUZE
-  - sh cleanAll
-  - sh genDeliverable
-  - cd ../
-  - mv DUMESTRE-HUGDELARAUZE.tar.gz Tools/
-  - cd Tools/
+  - ant genDeliverable
+  - mv deliverable/DUMESTRE-HUGDELARAUZE.tar.gz ../Tools/
+  - cd ../Tools/
   - sh Deploiement DUMESTRE-HUGDELARAUZE
  
 deploy:
