Major breaking update
Restructuration of main directory

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "SIT213 | JDK11",
 	"dockerFile": "Dockerfile",
 	
-	"postCreateCommand": "java -version",
+	// "postCreateCommand": "java -version",
 
 	"extensions": [
 		"vscjava.vscode-java-pack"
