--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
     <property name="deployment.tools.dir" value=".project_tools"/>
     <property name="deployment.scripts.dir" value=".project_scripts"/>
 
-    <property name="package.authors" value="DUMESTRE-HUGDELARAUZE"/>
+    <property name="package.authors" value="BARTOLI-DUMESTRE-FRANCIS-HUGDELARAUZE"/>
     <property name="package.archive" value="${artifacts.dir}/${package.authors}"/>
 
     <!-- =================================        Classpath         ================================= -->
