--- a/build.xml
+++ b/build.xml
@@ -46,34 +46,37 @@
     </target>
 
     <!-- =====     target: prepareAll     ===== -->
-    <target name="prepareAll" depends="prepareBuild, prepareDocumentation, prepareArtifacts, prepareDeployment" description="--> Initialize project structure"/>
+    <target name="prepareAll" depends="prepareBuild, prepareDocumentation, prepareArtifacts, prepareDeployment" 
+            description="--> Initialize project structure"/>
 
         <!-- =====     target: prepareBuild     ===== -->
-        <target name="prepareBuild" description="--=--> Initialize build structure">
+        <target name="prepareBuild" description="--+--> Initialize build structure">
             <mkdir dir="${build.dir}"/>
         </target>
 
         <!-- =====     target: prepareDocs     ===== -->
-        <target name="prepareDocumentation" description="--=--> Initialize documentation structure">
+        <target name="prepareDocumentation" description="--+--> Initialize documentation structure">
             <mkdir dir="${docs.dir}"/>
         </target>
 
         <!-- =====     target: prepareArtifacts     ===== -->
-        <target name="prepareArtifacts" description="--=--> Initialize artifacts structure">
+        <target name="prepareArtifacts" description="--+--> Initialize artifacts structure">
             <mkdir dir="${artifacts.dir}"/>
         </target>
 
         <!-- =====     target: prepareDeployment     ===== -->
-        <target name="prepareDeployment" description="--=--> Initialize deployment structure">
+        <target name="prepareDeployment" description="--+--> Initialize deployment structure">
             <mkdir dir="${deployment.test.dir}"/>
         </target>
 
     <!-- =====     target: compileAll     ===== -->
-    <target name="compileAll" depends="compileApp, compileTest" description="--> Compile app &amp; test source (if test available)">
+    <target name="compileAll" depends="compileApp, compileTest"
+            description="--> Compile app &amp; test source (if test available)">
     </target>
 
         <!-- =====     target: compileApp     ===== -->
-        <target name="compileApp" depends="prepareBuild" description="--=--> Compile app source">
+        <target name="compileApp" depends="prepareBuild" 
+                description="--+--> Compile app source">
             <echo>=====Compiling ${source.dir} files ...=====</echo>
             <javac debug="on" srcdir="${source.dir}" destdir="${build.dir}" includeAntRuntime="false">
                 <compilerarg value="-Xlint:all"/>
@@ -81,29 +84,44 @@
         </target>
 
         <!-- =====     target: compileTest     ===== -->
-        <target name="compileTest" depends="compileTest.check, prepareBuild" if="test.available" description="--=--> Compile test source (if available)">
-            <echo>=====Compiling ${source.test.dir} files...=====</echo>
-            <javac debug="on" srcdir="${source.test.dir}" classpathref="test.classpath" destdir="${build.dir}" includeAntRuntime="false">
-                <compilerarg value="-Xlint:all"/>
-            </javac>
-        </target>
+        <target name="compileTest" depends="compileTest.ready, compileTest.empty"
+                description="--+--> Compile test source (if available)"/>
 
-        <!-- =====     condition: compileTest.check     ===== -->
-        <target name="compileTest.check">
-            <condition property="test.available">
-                    <available classname="test.classpath"/>
-            </condition>
-        </target>
+            <!-- =====     condition: compileTest.check     ===== -->
+            <target name="compileTest.check">
+                <condition property="test.available">
+                        <available classname="test.classpath"/>
+                </condition>
+            </target>
+
+            <target name="compileTest.ready" depends="prepareBuild" if="${test.available}"
+                    description="--+--o--> Executed when test are implemented">
+                <echo>=====Compiling ${source.test.dir} files...=====</echo>
+                <javac debug="on" srcdir="${source.test.dir}" classpathref="test.classpath" destdir="${build.dir}" includeAntRuntime="false">
+                    <compilerarg value="-Xlint:all"/>
+                </javac>
+            </target>
+            
+            <target name="compileTest.empty" depends="prepareBuild" unless="${test.available}"
+                    description="--+--x--> Executed when no test are implemented">
+                <echo>=====No test to compile in ${source.test.dir}=====</echo>
+            </target>
 
     <!-- =====     target: runApp     ===== -->
-    <target name="runApp" depends="compileApp" description="--> Run app">
+    <target name="runApp" depends="compileApp" 
+            description="--> Run app">
         <java dir="${build.dir}" classname="Simulateur" fork="true"/>
     </target>
 
-    <!-- =====     target: runUnitTest     ===== -->
+    <!-- =====     target: runTest     ===== -->
+    <target name="runTest" depends="compileTest" if="${test.available}"
+            description="--> Run unit test">
+        <java dir="${build.dir}" classname="SimulateurTest" fork="true"/>
+    </target>
 
     <!-- =====     target: RunDeploymentTest     ===== -->
-    <target name="runDeploymentTest" depends="generateArtifacts" description="--> Run deployment test">
+    <target name="runDeploymentTest" depends="generateArtifacts" 
+            description="--> Run deployment test">
         <copy file="${package.archive}.tar.gz" todir="${deployment.test.dir}"/>
         <copy todir="${deployment.test.dir}">
             <fileset dir="${deployment.tools.dir}" excludes="readme"/>
@@ -115,15 +133,18 @@
     </target>
 
     <!-- =====     target: generate     ===== -->
-    <target name="generateAll" depends="generateDocumentation, generateArtifacts" description="--> Generate documentation and artifacts"/>
+    <target name="generateAll" depends="generateDocumentation, generateArtifacts" 
+            description="--> Generate documentation and artifacts"/>
 
         <!-- =====     target: generateDocumentation     ===== -->
-        <target name="generateDocumentation" depends="prepareDocumentation" description="--=--> Generate java documentation">
+        <target name="generateDocumentation" depends="prepareDocumentation" 
+                description="--+--> Generate java documentation">
             <javadoc sourcepath="${source.dir}" destdir="${docs.dir}"/>
         </target>
 
         <!-- =====     target: generateArtifacts     ===== -->
-        <target name="generateArtifacts" depends="prepareAll" description="--=--> Generate artifacts for delivery">
+        <target name="generateArtifacts" depends="prepareAll" 
+                description="--+--> Generate artifacts for delivery">
             <tar destfile="${package.archive}.tar.gz" compression="gzip">
                 <tarfileset dir="${basedir}" excludes=".*/**, ${artifacts.dir}, ${deployment.test.dir}"/>
                 <tarfileset dir="${deployment.scripts.dir}/"/>
