--- a/build.xml
+++ b/build.xml
@@ -21,17 +21,22 @@
     <property name="deployment.tools.dir" value=".project_tools"/>
     <property name="deployment.scripts.dir" value=".project_scripts"/>
 
-    <property name="package.authors" value="DUMESTRE-HUGDELARAUZE"/>
+    <property name="package.authors" value="Bartoli-Dumestre-Francis-Hugdelarauze"/>
     <property name="package.archive" value="${artifacts.dir}/${package.authors}"/>
 
     <!-- =================================        Classpath         ================================= -->
 
-    <!-- ADD JUNIT 5 JAR TO CLASSPATH -->
+    <!-- ADD JUNIT 4 JAR TO LIB -->
+
+    <path id="test.classpath">
+        <pathelement path="${build.dir}"/>
+        <fileset dir="${lib.dir}" includes="*.jar" />
+    </path>
 
     <!-- =================================        Targets           ================================= -->
 
-    <!-- =====     target: clean     ===== -->
-    <target name="clean" description="--> Clean generated files">
+    <!-- =====     target: cleanAll     ===== -->
+    <target name="cleanAll" description="--> Clean generated files">
         <delete includeEmptyDirs="true" quiet="true">
             <fileset dir="${build.dir}"/>
             <fileset dir="${docs.dir}"/>
@@ -40,44 +45,83 @@
         </delete>
     </target>
 
-    <!-- =====     target: prepare     ===== -->
-    <target name="prepare" description="--> Initialize project structure">
-        <mkdir dir="${build.dir}"/>
-        <mkdir dir="${docs.dir}"/>
-        <mkdir dir="${artifacts.dir}"/>
-        <mkdir dir="${deployment.test.dir}"/>
+    <!-- =====     target: prepareAll     ===== -->
+    <target name="prepareAll" depends="prepareBuild, prepareDocumentation, prepareArtifacts, prepareDeployment" 
+            description="--> Initialize project structure"/>
+
+        <!-- =====     target: prepareBuild     ===== -->
+        <target name="prepareBuild" description="--+--> Initialize build structure">
+            <mkdir dir="${build.dir}"/>
+        </target>
+
+        <!-- =====     target: prepareDocs     ===== -->
+        <target name="prepareDocumentation" description="--+--> Initialize documentation structure">
+            <mkdir dir="${docs.dir}"/>
+        </target>
+
+        <!-- =====     target: prepareArtifacts     ===== -->
+        <target name="prepareArtifacts" description="--+--> Initialize artifacts structure">
+            <mkdir dir="${artifacts.dir}"/>
+        </target>
+
+        <!-- =====     target: prepareDeployment     ===== -->
+        <target name="prepareDeployment" description="--+--> Initialize deployment structure">
+            <mkdir dir="${deployment.test.dir}"/>
+        </target>
+
+    <!-- =====     target: compileAll     ===== -->
+    <target name="compileAll" depends="compileApp, compileTest"
+            description="--> Compile app &amp; test source (if test available)">
     </target>
 
-    <!-- =====     target: compile     ===== -->
-    <target name="compileApp" depends="prepare" description="--> Compile app source">
-        <javac srcdir="${source.dir}" destdir="${build.dir}" includeAntRuntime="false"/>
+        <!-- =====     target: compileApp     ===== -->
+        <target name="compileApp" depends="prepareBuild" 
+                description="--+--> Compile app source">
+            <echo>=====Compiling ${source.dir} files ...=====</echo>
+            <javac debug="on" srcdir="${source.dir}" destdir="${build.dir}" includeAntRuntime="false">
+                <compilerarg value="-Xlint:all"/>
+            </javac>
+        </target>
+
+        <!-- =====     target: compileTest     ===== -->
+        <target name="compileTest" depends="compileTest.ready, compileTest.empty"
+                description="--+--> Compile test source (if available)"/>
+
+            <!-- =====     condition: compileTest.check     ===== -->
+            <target name="compileTest.check">
+                <condition property="test.available">
+                        <available classname="test.classpath"/>
+                </condition>
+            </target>
+
+            <target name="compileTest.ready" depends="prepareBuild" if="${test.available}"
+                    description="--+--o--> Executed when test are implemented">
+                <echo>=====Compiling ${source.test.dir} files...=====</echo>
+                <javac debug="on" srcdir="${source.test.dir}" classpathref="test.classpath" destdir="${build.dir}" includeAntRuntime="false">
+                    <compilerarg value="-Xlint:all"/>
+                </javac>
+            </target>
+            
+            <target name="compileTest.empty" depends="prepareBuild" unless="${test.available}"
+                    description="--+--x--> Executed when no test are implemented">
+                <echo>=====No test to compile in ${source.test.dir}=====</echo>
+            </target>
+
+    <!-- =====     target: runApp     ===== -->
+    <target name="runApp" depends="compileApp" 
+            description="--> Run app">
+        <java dir="${build.dir}" classname="Simulateur" fork="true"/>
     </target>
 
-    <!-- =====     target: compileUnitTest     ===== -->
-    <target name="compileUnitTest" depends="prepare" description="--> Compile test source">
-        <javac srcdir="${source.test.dir}" destdir="${build.dir}" includeAntRuntime="false"/>
-    </target>
-
-    <!-- =====     target: run     ===== -->
-    <target name="runApp" depends="compileApp" description="--> Run app">
-        <java dir="${build.dir}" classname="hello.HelloWorld" fork="true"/>
-
-        <java dir="${build.dir}" classname="hello.HelloWorld" fork="true">
-            <arg value="Lucas DUMESTRE"/>
-        </java>
-
-        <java dir="${build.dir}" classname="hello.HelloWorld" fork="true">
-            <arg value="Sebastien HUG DE LARAUZE"/>
-        </java>
-    </target>
-
-    <!-- =====     target: runUnitTest     ===== -->
-    <target name="runUnitTest" depends="compileApp, compileUnitTest" description="--> Run app test">
-        <java dir="${build.dir}" classname="hello.HelloWorldTest" fork="true"/>
+    <!-- =====     target: runTest     ===== -->
+    <target name="runTest" depends="compileTest" if="${test.available}"
+            description="--> Run unit test">
+        <java dir="${build.dir}" classname="SimulateurTest" fork="true"/>
     </target>
 
     <!-- =====     target: RunDeploymentTest     ===== -->
-    <target name="runDeploymentTest" depends="generateArtifacts" description="--> Run deployment test">
+    <target name="runDeploymentTest" depends="generateArtifacts" 
+            description="--> Run deployment test">
         <copy file="${package.archive}.tar.gz" todir="${deployment.test.dir}"/>
         <copy todir="${deployment.test.dir}">
             <fileset dir="${deployment.tools.dir}" excludes="readme"/>
@@ -88,17 +132,23 @@
         </exec>
     </target>
 
-    <!-- =====     target: generateDocumentation     ===== -->
-    <target name="generateDocumentation" depends="prepare" description="--> Generate java documentation">
-        <javadoc sourcepath="${source.dir}" destdir="${docs.dir}"/>
-    </target>
+    <!-- =====     target: generate     ===== -->
+    <target name="generateAll" depends="generateDocumentation, generateArtifacts" 
+            description="--> Generate documentation and artifacts"/>
 
-    <!-- =====     target: generateArtifacts     ===== -->
-    <target name="generateArtifacts" depends="clean, prepare" description="--> Generate artifacts for delivery">
-        <tar destfile="${package.archive}.tar.gz" compression="gzip">
-            <tarfileset dir="${basedir}" excludes=".*/**, ${artifacts.dir}, ${deployment.test.dir}"/>
-            <tarfileset dir="${deployment.scripts.dir}/"/>
-        </tar>
-    </target>
+        <!-- =====     target: generateDocumentation     ===== -->
+        <target name="generateDocumentation" depends="prepareDocumentation" 
+                description="--+--> Generate java documentation">
+            <javadoc sourcepath="${source.dir}" destdir="${docs.dir}"/>
+        </target>
+
+        <!-- =====     target: generateArtifacts     ===== -->
+        <target name="generateArtifacts" depends="prepareAll" 
+                description="--+--> Generate artifacts for delivery">
+            <tar destfile="${package.archive}.tar.gz" compression="gzip">
+                <tarfileset dir="${basedir}" excludes=".*/**, ${artifacts.dir}, ${deployment.test.dir}"/>
+                <tarfileset dir="${deployment.scripts.dir}/"/>
+            </tar>
+        </target>
 
 </project>
