--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,17 +1,17 @@
-#-------------------------------------------------------------------------------------------------------------
+#-----------------------------------------------------------------------------------------------------------------------
 # JAVA 11 + ANT Project
-#-------------------------------------------------------------------------------------------------------------
+#-----------------------------------------------------------------------------------------------------------------------
 
 FROM openjdk:11-jdk
 
-#-------------------Configure apt-----------------------------------------------------------------------------
+#-------------------Configure apt---------------------------------------------------------------------------------------
 ENV DEBIAN_FRONTEND=noninteractive
 RUN echo "##########> Install tools through apt <##########"
 RUN apt-get update && apt-get -y upgrade \
     && apt-get -y install --no-install-recommends apt-utils dialog 2>&1 \
     && apt-get -y install git procps curl lsb-release man
 
-#-------------------Install Apache Ant Tools------------------------------------------------------------------
+#-------------------Install Apache Ant Tools----------------------------------------------------------------------------
 ARG ANT_VERSION=1.10.7
 ARG ANT_SHA=838ce70c7dbd2b53068ce17b169c0b3fbed5e0ab7be5c707f052418fb6a4a1620f2d4017ceca1379cd25edce3e46d70bb2b5de4e1c5c52e2e1275deec1228084
 ENV ANT_HOME /usr/share/ant
@@ -28,14 +28,13 @@ RUN echo "##########> Install Apache Ant Tools <##########" \
     && rm -f /tmp/apache-ant.tar.gz \
     # Fetch Ant library
     && ant -f ${ANT_HOME}/fetch.xml -Ddest=system
-#-------------------------------------------------------------------------------------------------------------
 
-#-------------------Clean up----------------------------------------------------------------------------------
+#-------------------Clean up--------------------------------------------------------------------------------------------
 RUN echo "##########> Clean up through apt <##########"
 RUN apt-get autoremove -y \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
 
-#-------------------Allow for a consistant java home location for settings - image is changing over time------
+#-------------------Allow for a consistant java home location for settings - image is changing over time----------------
 RUN if [ ! -d "/docker-java-home" ]; then ln -s "${JAVA_HOME}" /docker-java-home; fi
